nlewanczyk|#619|Clean up findbugs critical violations
Change-Id: I351830d67c28ec76c97d6cdb928988edf02e9ab0