@@ -7,6 +7,6 @@ import java.util.Comparator;
 class SequenceBasedOutboundVoiceMessageComparator implements Comparator<OutboundVoiceMessage> {
     @Override
     public int compare(OutboundVoiceMessage message1, OutboundVoiceMessage message2) {
-        return new Long(message1.getSequenceNumber()).compareTo(message2.getSequenceNumber());
+        return Long.valueOf(message1.getSequenceNumber()).compareTo(message2.getSequenceNumber());
     }
 }
